--- a/src/app/funds/balance/qubera-table/qubera-table.component.html
+++ b/src/app/funds/balance/qubera-table/qubera-table.component.html
@@ -1,4 +1,5 @@
-<table class="table qubera-table">
+<table class="table qubera-table"
+       *ngIf="kycStatus === KYC_STATUS.SUCCESS && existQuberaAccounts && existQuberaAccounts !== PENDING">
   <thead>
     <tr>
       <th class="table__cell-head table__cell-head--sort table__cell-head--tal">{{'Currency' | translate}}</th>
@@ -36,15 +37,15 @@
         <button class="btn btn--center btn--empty-blue btn--small btn--hidden" (click)="cryptoWithdrawOut.emit(true)">{{'Withdraw' | translate}}</button>
       </td>
     </tr>
-      <!-- <tr class="table__row balance__table-row">
+      <tr class="table__row balance__table-row" *ngIf="!balances.length">
         <td class="table__cell table__cell--tac" colspan="10">
           {{'No matching records found' | translate}}
         </td>
-      </tr> -->
+      </tr>
     </tbody>
   </table>
 
-  <div class="no-veryfied-qubera">
+  <div class="no-veryfied-qubera" *ngIf="!existQuberaAccounts && existQuberaAccounts !== PENDING">
     <div class="qubera-icon">
       <svg width="24" height="21" viewBox="0 0 24 21" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path d="M4.14605 7.02734H6.0973L6.39013 16.003H3.90234L4.14605 7.02734Z" fill="white"/>
@@ -88,3 +89,8 @@
     </ul>
   </div> -->
   <!--paginator end-->
+
+
+<div class="loading-container" *ngIf="existQuberaAccounts === PENDING">
+  <app-loader></app-loader>
+</div>
