--- a/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-fiat/refill-fiat.component.html
@@ -88,10 +88,13 @@
 
     </div>
   </form>
-  <button class="btn btn--center"
-          *ngIf="!submitSuccess && selectedMerchant"
-          [ngClass]="{'btn--empty-blue': !form.valid || !selectedMerchant.name}"
-          (click)="submitRefill()">
+  <button
+    class="btn btn--center"
+    *ngIf="!submitSuccess && selectedMerchant"
+    [ngClass]="{'btn--empty-blue': !form.valid || !selectedMerchant.name}"
+    (click)="submitRefill()"
+    [disabled]="loading"
+  >
     Refill
   </button>
 
