--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
@@ -193,9 +193,10 @@
           <div class="send__info-value">{{calculateData.resultAmount }} {{currName}}</div>
         </div>
       </div>
-      <button class="btn btn--center"
-              [ngClass]="{'btn--empty-blue': !form.valid}"
-              (click)="onSubmitWithdrawal()"
+      <button
+        class="btn btn--center"
+        [ngClass]="{'btn--empty-blue': !form.valid}"
+        (click)="onSubmitWithdrawal()"
       >{{'Withdraw' | translate}}
         <span class="value">{{calculateData.resultAmount}}</span>
         <span> {{currName}}</span>
