--- a/src/app/settings/password/password.component.html
+++ b/src/app/settings/password/password.component.html
@@ -37,7 +37,7 @@
                 {{'Current password invalid.' | translate}}
              </span>
           </div>
-          
+
           <!-- <span
             class="wrap-input__message"
             *ngIf="currentPassword.errors['passwordValidation'] ||
@@ -92,7 +92,7 @@
                 ' numbers (0-9) and/or any combination of @*%!#^!&$<>.()-=+\' characters.') | translate}}
           </span>
           </div>
-          
+
         </ng-container>
 
         <!--Input error section ends-->
@@ -138,7 +138,7 @@
             {{'Passwords you provided do not match' | translate}}
           </span>
           </div>
-          
+
         </ng-container>
         <!--Input error section ends-->
       </div>
@@ -151,6 +151,7 @@
     <button
       class="btn settings__form-btn settings__password-btn"
       [ngClass]="{'settings__form-btn--active': form.valid}"
+      [disabled]="loading"
     >{{'Change password' | translate}}</button>
   </form>
 </div>
