--- a/src/app/dashboard/components/embedded-orders/embedded-open-orders/embedded-open-orders.component.html
+++ b/src/app/dashboard/components/embedded-orders/embedded-open-orders/embedded-open-orders.component.html
@@ -60,7 +60,7 @@
       <div class="revoke-request" *ngIf="showCancelOrderConfirm === item.id">
         <div class="revoke-request__title">{{'Are you sure you want to cancel this order?' | translate}}</div>
         <div class="revoke-request__button-wrap">
-          <button class="btn btn--small" (click)="cancelOrder(item)">{{'Yes' | translate}}</button>
+          <button class="btn btn--small" (click)="cancelOrder(item)" [disabled]="loading">{{'Yes' | translate}}</button>
           <button class="btn btn--small" (click)="onShowCancelOrderConfirm(null)">{{'No' | translate}}</button>
         </div>
         <div class="revoke-request__triangle"></div>
@@ -204,7 +204,7 @@
     </div>
     <div class="order-edit-popup__btns-wrap">
     <button class="btn btn--small btn--empty-red" (click)="deleteOrder(order)">{{'Delete' | translate}}</button>
-    <button class="btn btn--small btn--empty-blue" (click)="saveOrder()">{{'Save' | translate}}</button>
+    <button class="btn btn--small btn--empty-blue" (click)="saveOrder()" [disabled]="loading">{{'Save' | translate}}</button>
     </div>
     </div>
   </div>
