--- a/src/app/dashboard/components/embedded-orders/embedded-orders.component.html
+++ b/src/app/dashboard/components/embedded-orders/embedded-orders.component.html
@@ -63,14 +63,20 @@
 
   <div class="widget__content">
     <div class="tabs widget__tabs">
-      <button class="tabs__item "
-              (click)="toggleMainTab('open')"
-              [ngClass]="{'tabs__item--active': mainTab === 'open', 'tab-no-active': mainTab !== 'open'}">
+      <button
+        class="tabs__item "
+        (click)="toggleMainTab('open')"
+        [ngClass]="{'tabs__item--active': mainTab === 'open', 'tab-no-active': mainTab !== 'open'}"
+        [disabled]="loading"
+      >
         {{'Open orders' | translate}} (<span >{{openOrdersCount}}</span>)
       </button>
-      <button class="tabs__item "
-              (click)="toggleMainTab('history')"
-              [ngClass]="{'tabs__item--active': mainTab === 'history', 'tab-no-active': mainTab !== 'history'}">
+      <button
+        class="tabs__item "
+        (click)="toggleMainTab('history')"
+        [ngClass]="{'tabs__item--active': mainTab === 'history', 'tab-no-active': mainTab !== 'history'}"
+        [disabled]="loading"
+      >
         {{'History' | translate}}
       </button>
     </div>
