--- a/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.html
+++ b/src/app/funds/balance/refill-money/refill-step-two/refill-crypto/refill-crypto.component.html
@@ -41,9 +41,12 @@
     </div>
   </div>
 
-  <button class="btn btn--empty-blue"
-          *ngIf="isGenerateNewAddress"
-          (click)="generateNewAddress()">
+  <button
+    class="btn btn--empty-blue"
+    *ngIf="isGenerateNewAddress"
+    (click)="generateNewAddress()"
+    [disabled]="loading"
+  >
     <span class="btn__icon btn__icon--light-blue">
       <svg width="10" height="12" viewBox="0 0 10 12" fill="none" xmlns="http://www.w3.org/2000/svg">
         <path
