--- a/src/app/funds/balance/send-money/send-step-three/transfer-protected-code/transfer-protected-code.component.html
+++ b/src/app/funds/balance/send-money/send-step-three/transfer-protected-code/transfer-protected-code.component.html
@@ -102,9 +102,11 @@
       <div class="send__info-value">{{responseCommission.resultAmount}} {{activeCrypto ? activeCrypto.name : ''}}</div>
     </div>
   </div>
-  <button class="btn btn--center"
-          [ngClass]="{'btn--empty-blue': !form.valid}"
-          (click)="submitTransfer()">
+  <button
+    class="btn btn--center"
+    [ngClass]="{'btn--empty-blue': !form.valid}"
+    (click)="submitTransfer()"
+  >
     {{'Create code' | translate}}
   </button>
   <div class="send__line"></div>
