--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -80,11 +80,11 @@
             </ul>
           </div>
       </li>
-      <li class="menu__item" routerLinkActive="menu__link--active">
+      <!-- <li class="menu__item" routerLinkActive="menu__link--active">
         <a class="menu__link" routerLink="/dashboard">
           <span class="menu__link-text">{{'IEO' | translate}}</span>
         </a>
-      </li>
+      </li> -->
       <!-- <li class="menu__item" routerLinkActive="menu__link--active">
 
       </li> -->
