--- a/src/assets/scss/pages/_orders.scss
+++ b/src/assets/scss/pages/_orders.scss
@@ -170,7 +170,8 @@
       margin-right: 8px;
 
       img {
-        height: 100%;
+            max-height: 100%;
+    max-width: 100%;
       }
     }
 
