--- a/src/app/dashboard/components/trading-mobile/trading-mobile.component.html
+++ b/src/app/dashboard/components/trading-mobile/trading-mobile.component.html
@@ -76,7 +76,7 @@
           </span>
         </label>
       </div>
-      
+
     </form>
     <form class="widget__trading-form" action="" [formGroup]="sellForm">
       <div class="widget__trading-title-wr">
@@ -136,15 +136,27 @@
           </span>
         </label>
       </div>
-      
+
     </form>
 
   </div>
 
 </div>
 <div class="trade-buttons-wr">
-  <button class="btn btn--active widget__trading-btn widget__trading-btn--buy" (click)="onSubmit(BUY)">Buy {{arrPairName[0]}}</button>
-  <button class="btn btn--active widget__trading-btn widget__trading-btn--sell" (click)="onSubmit(SELL)">Sell {{arrPairName[0]}}</button>
+  <button
+    [disabled]="loading"
+    class="btn btn--active widget__trading-btn widget__trading-btn--buy"
+    (click)="onSubmit(BUY)"
+  >
+    Buy {{arrPairName[0]}}
+  </button>
+  <button
+    [disabled]="loading"
+    class="btn btn--active widget__trading-btn widget__trading-btn--sell"
+    (click)="onSubmit(SELL)"
+  >
+    Sell {{arrPairName[0]}}
+  </button>
 </div>
 
 <!-- trading mobile end -->
