--- a/src/app/popups/final-step-recovery-password/final-step-recovery-password.component.html
+++ b/src/app/popups/final-step-recovery-password/final-step-recovery-password.component.html
@@ -114,11 +114,15 @@
         </ng-container>
         <!--Input error section ends-->
       </div>
-      <button class="btn popup__btn" (click)="createUser()"
-              [ngClass]="{
-                'bg-none': !passwordForm.valid,
-                'popup__btn--active': passwordForm.valid
-              }">
+      <button
+        class="btn popup__btn"
+        (click)="createUser()"
+        [disabled]="loading"
+        [ngClass]="{
+          'bg-none': !passwordForm.valid,
+          'popup__btn--active': passwordForm.valid
+        }"
+      >
         {{'Update password'  | translate}}
       </button>
     </form>
