--- a/src/app/dashboard/components/markets/markets.component.html
+++ b/src/app/dashboard/components/markets/markets.component.html
@@ -215,9 +215,11 @@
                 <div class="txt-small txt-light-grey" *ngIf="pair.market !== 'USD'">$ {{ pair.priceInUsd | number: '1.0-2' | replaceNumber:true}}</div>
               </div>
               <div class="table__cell table__cell--p4 table__cell--tar" style="width: 68%;" (click)="onSelectCurrencyPair(pair)">
-                  <span class=""
-                        [ngClass]="{'change-indicate--green': isChangePositive(pair), 'change-indicate--red': !isChangePositive(pair)}">
-              {{pair.percentChange >= 0 ? '+' : ''}}{{pair.percentChange | replaceNumber}}%</span>
+                <span
+                  [ngClass]="{'change-indicate--green': isChangePositive(pair), 'change-indicate--red': !isChangePositive(pair)}"
+                >
+                  {{pair.percentChange >= 0 ? '+' : ''}}{{pair.percentChange | replaceNumber}}%
+                </span>
               </div>
             </div>
             <div style="height: 4px;"></div>
