--- a/src/app/funds/balance/balance-mob/balance-mob.component.html
+++ b/src/app/funds/balance/balance-mob/balance-mob.component.html
@@ -6,35 +6,37 @@
           {{'Balances' | translate}}
         </h1>
       </div>
-      <div class="widget__search-btn"><svg fill="none" height="14" viewBox="0 0 16 16" width="14" xmlns="http://www.w3.org/2000/svg"><path d="M7.22222 13.6444C8.78354 13.6444 10.2149 13.0869 11.3278 12.1605L14.1947 15.0275C14.4247 15.2575 14.7975 15.2575 15.0275 15.0275C15.2575 14.7975 15.2575 14.4247 15.0275 14.1947L12.1605 11.3278C13.0869 10.2149 13.6444 8.78354 13.6444 7.22222C13.6444 3.67557 10.7689 0.8 7.22222 0.8C3.67557 0.8 0.8 3.67557 0.8 7.22222C0.8 10.7689 3.67557 13.6444 7.22222 13.6444ZM12.4667 7.22222C12.4667 10.1188 10.1188 12.4667 7.22222 12.4667C4.32563 12.4667 1.97778 10.1188 1.97778 7.22222C1.97778 4.32563 4.32563 1.97778 7.22222 1.97778C10.1188 1.97778 12.4667 4.32563 12.4667 7.22222Z" stroke-linecap="round" stroke-linejoin="round" stroke-width="0.4"></path></svg> Search 
+      <div class="widget__search-btn"><svg fill="none" height="14" viewBox="0 0 16 16" width="14" xmlns="http://www.w3.org/2000/svg"><path d="M7.22222 13.6444C8.78354 13.6444 10.2149 13.0869 11.3278 12.1605L14.1947 15.0275C14.4247 15.2575 14.7975 15.2575 15.0275 15.0275C15.2575 14.7975 15.2575 14.4247 15.0275 14.1947L12.1605 11.3278C13.0869 10.2149 13.6444 8.78354 13.6444 7.22222C13.6444 3.67557 10.7689 0.8 7.22222 0.8C3.67557 0.8 0.8 3.67557 0.8 7.22222C0.8 10.7689 3.67557 13.6444 7.22222 13.6444ZM12.4667 7.22222C12.4667 10.1188 10.1188 12.4667 7.22222 12.4667C4.32563 12.4667 1.97778 10.1188 1.97778 7.22222C1.97778 4.32563 4.32563 1.97778 7.22222 1.97778C10.1188 1.97778 12.4667 4.32563 12.4667 7.22222Z" stroke-linecap="round" stroke-linejoin="round" stroke-width="0.4"></path></svg> Search
       </div>
     </div>
     <div class="tabs balance__tabs-mob">
       <button
-      class="tabs__item"
-      [ngClass]="{'tabs__item--active': currTab === Tab.CRYPTO}"
-      (click)="onSelectTab.emit(Tab.CRYPTO)"
+        class="tabs__item"
+        [ngClass]="{'tabs__item--active': currTab === Tab.CRYPTO}"
+        (click)="onSelectTab.emit(Tab.CRYPTO)"
+        [disabled]="loading"
       >
-      {{'Crypto' | translate}}
-    </button>
-    <button
-    class="tabs__item"
-    [ngClass]="{'tabs__item--active': currTab === Tab.FIAT}"
-    (click)="onSelectTab.emit(Tab.FIAT)"
-    >
-    {{'Fiat' | translate}}
-  </button>
+        {{'Crypto' | translate}}
+      </button>
+      <button
+        class="tabs__item"
+        [ngClass]="{'tabs__item--active': currTab === Tab.FIAT}"
+        (click)="onSelectTab.emit(Tab.FIAT)"
+        [disabled]="loading"
+      >
+        {{'Fiat' | translate}}
+      </button>
 
-</div>
-<div class="balance__header-btn-wrap">
-  <button class="btn btn--active balance__title-btn"
-  (click)="openRefillBalancePopup.emit(true)">
-  {{'Refill balance' | translate}}
-</button>
-<button class="btn btn--empty-blue balance__title-btn"
-(click)="openSendMoneyPopup.emit(true)">
-{{'Send money' | translate}}
-</button>
+    </div>
+    <div class="balance__header-btn-wrap">
+      <button class="btn btn--active balance__title-btn"
+        (click)="openRefillBalancePopup.emit(true)">
+        {{'Refill balance' | translate}}
+      </button>
+      <button class="btn btn--empty-blue balance__title-btn"
+        (click)="openSendMoneyPopup.emit(true)">
+        {{'Send money' | translate}}
+      </button>
 
       <!-- <div *ngIf="loading">
         <app-loader size="small"></app-loader>
@@ -149,12 +151,12 @@
     <!--</div>-->
     <div class="pending-wr">
       <div class="bg-btn">
-        
+
       </div>
       <button
-      class="tabs__item"
-      [ngClass]="{'tabs__item--active': currTab === Tab.PR}"
-      (click)="onGoToPendingReq()"
+        class="tabs__item"
+        [ngClass]="{'tabs__item--active': currTab === Tab.PR}"
+        (click)="onGoToPendingReq()"
       >
       <span class="indicate">{{countOfPendingRequests}}</span>
       Pending  requests
