--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -136,10 +136,12 @@
             class="tabs__item"
             [ngClass]="{'tabs__item--active': currTab === Tab.CRYPTO}"
             (click)="onSelectTab(Tab.CRYPTO)"
+            [disabled]="loading$ | async"
           >
             {{'Crypto Balances' | translate}}
           </button>
           <button
+            [disabled]="loading$ | async"
             class="tabs__item"
             [ngClass]="{'tabs__item--active': currTab === Tab.FIAT}"
             (click)="onSelectTab(Tab.FIAT)"
@@ -166,7 +168,9 @@
           <button
             class="tabs__item"
             [ngClass]="{'tabs__item--active': currTab === Tab.QUBERA}"
-            (click)="onSelectTab(Tab.QUBERA)">
+            (click)="onSelectTab(Tab.QUBERA)"
+            [disabled]="loading$ | async"
+          >
             <div class="qubera-icon">
               <svg width="24" height="21" viewBox="0 0 24 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M4.14605 7.02734H6.0973L6.39013 16.003H3.90234L4.14605 7.02734Z" fill="white"/>
@@ -186,6 +190,7 @@
             class="tabs__item"
             [ngClass]="{'tabs__item--active': currTab === Tab.PR}"
             (click)="onSelectTab(Tab.PR)"
+            [disabled]="loading$ | async"
           >
             <span>{{'Pending requests' | translate}}</span>
             <span class="indicate">{{countOfPendingRequests$ | async}}</span>
