--- a/src/app/funds/balance/send-money/send-step-three/transfer-protected-email-code/transfer-protected-email-code.component.html
+++ b/src/app/funds/balance/send-money/send-step-three/transfer-protected-email-code/transfer-protected-email-code.component.html
@@ -51,7 +51,7 @@
             (form.get('amount').touched || isSubmited)}">
         <div class="avaliable">
           {{'Avaliable:' | translate}}
-          <a (click)="balanceClick()" class="link">
+          <a (click)="balanceClick()" class="link" [ngStyle]="{'pointer-events': loadingBalance ? 'none' : 'auto'}">
             {{activeBalance | number:'1.1-8' | replaceNumber}} {{activeCrypto ? activeCrypto.name : ''}}
           </a>
         </div>
