--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.html
@@ -57,7 +57,7 @@
                           && (form.get('amount').touched || isSubmited)}"
              *ngIf="cryptoInfoByName && cryptoInfoByName.merchantCurrencyData.length">
           <div class="avaliable">{{'Avaliable:' | translate}}
-            <a (click)="balanceClick()" class="link">
+            <a (click)="balanceClick()" class="link" [ngStyle]="{'pointer-events': loadingBalance ? 'none' : 'auto'}">
               {{activeBalance | roundCurrency: currName | formatCurrency: 'short': currName}} {{currName}}
             </a>
           </div>
