--- a/src/app/dashboard/components/embedded-orders/embedded-orders.component.scss
+++ b/src/app/dashboard/components/embedded-orders/embedded-orders.component.scss
@@ -1,5 +1,5 @@
 .tab-no-active{
-  border-bottom: 2px solid transparent;
+  // border-bottom: 2px solid transparent;
 }
 .widget__content{
   min-height: calc(100% - 45px);
