--- a/src/app/dashboard/components/markets/markets.component.scss
+++ b/src/app/dashboard/components/markets/markets.component.scss
@@ -50,7 +50,7 @@
 
 
 .tab-no-active {
-  border-bottom: 2px solid transparent;
+  // border-bottom: 2px solid transparent;
   @media(max-width: 1199px){
         border: none;
       }
