--- a/src/assets/scss/components/_table.scss
+++ b/src/assets/scss/components/_table.scss
@@ -306,9 +306,10 @@
         background-color: #191f42;
 
       }
-      &:hover {
-        //background-color: rgba(255, 255, 255, 0.1);
-        background-color: #1a2954;
+      &:not(.no-hover){
+        &:hover {
+          background-color: #1a2954;
+        }
       }
       &--more-info{
         background-color: unset !important;
