--- a/src/app/orders/orders-history/orders-history.component.html
+++ b/src/app/orders/orders-history/orders-history.component.html
@@ -122,7 +122,7 @@
         </div>
         <div class="row row--jcsb">
           <div class="wrap-input orders__datepicker filters-popup__datepicker">
-            <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateFrom?.date}" >{{'From' | translate}}</label>
+            <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateFrom?.date || isDateInputFromFocus}" >{{'From' | translate}}</label>
             <app-date-mask-input
               [innValue]="modelDateFrom"
               (inputFocus)="focusOrBlurDateFrom($event)"
@@ -140,7 +140,7 @@
             <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
           </div>
           <div class="wrap-input orders__datepicker input-el filters-popup__datepicker">
-            <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateTo?.date}" >{{'To' | translate}}</label>
+            <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateTo?.date || isDateInputToFocus}" >{{'To' | translate}}</label>
             <app-date-mask-input
               [innValue]="modelDateTo"
               (validDate)="dateToChanged($event)"
@@ -198,7 +198,7 @@
           <div class="wrap-input__line"></div>
         </div>
         <div class="wrap-input orders__datepicker">
-          <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateFrom?.date}">{{'From' | translate}}</label>
+          <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateFrom?.date || isDateInputFromFocus}">{{'From' | translate}}</label>
           <app-date-mask-input
             [innValue]="modelDateFrom"
             (validDate)="dateFromChanged($event)"
@@ -217,7 +217,7 @@
           <div class="wrap-input__line" style="position: absolute; bottom: 1px; width: 100%;"></div>
         </div>
         <div class="wrap-input orders__datepicker ">
-          <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateTo?.date}">{{'To' | translate}}</label>
+          <label class="wrap-input__label" [ngClass]="{'select-input_label': modelDateTo?.date || isDateInputToFocus}">{{'To' | translate}}</label>
           <app-date-mask-input
             [innValue]="modelDateTo"
             (validDate)="dateToChanged($event)"
