--- a/src/app/shared/components/date-mask-input/date-mask-input.component.html
+++ b/src/app/shared/components/date-mask-input/date-mask-input.component.html
@@ -1,7 +1,7 @@
 <input
   type="text"
   [(ngModel)]='value'
-  autocomplete="new Date"
+  autocomplete="1"
   [class.dirty]="mask.dirty"
   #mask="ngModel"
   #inputEl
