fix madal animation

--- a/src/app/funds/balance/balance.component.html
+++ b/src/app/funds/balance/balance.component.html
@@ -274,7 +274,7 @@
   </div>
 
 
-  <div *ngIf="showRefillBalancePopup">
+  <div>
     <app-refill-money
     [showPopup]="showRefillBalancePopup"
     [optionData]="refillBalanceData"
@@ -282,7 +282,7 @@
     ></app-refill-money>
   </div>
 
-  <div *ngIf="showSendMoneyPopup">
+  <div>
     <app-send-money
     [showPopup]="showSendMoneyPopup"
     [optionData]="sendMoneyData"
