--- a/src/app/funds/balance/send-money/send-step-three/transfer-protected-email-code/transfer-protected-email-code.component.scss
+++ b/src/app/funds/balance/send-money/send-step-three/transfer-protected-email-code/transfer-protected-email-code.component.scss
@@ -182,6 +182,12 @@ perfect-scrollbar{
 }
 
 // TEMP STYLE
+.wrap-input--error {
+  .wrap-input__label {
+    color: #EB5757 !important;
+  }
+}
+
 .loading-container {
   margin-top: 40%;
 }
