--- a/src/app/funds/balance/send-money/send-step-three/transfer-protected-email-code/transfer-protected-email-code.component.html
+++ b/src/app/funds/balance/send-money/send-step-three/transfer-protected-email-code/transfer-protected-email-code.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="!!activeCrypto && !!activeBalance">
-<div class="title send__title">{{'Make Inner transfer by email or nickname protected by code' | translate}}</div>
+<div class="title send__title">{{'Make Inner transfer by email protected by code' | translate}}</div>
 <div class="formWraper" *ngIf="isEnterData">
   <div class="subtitle send__subtitle">{{' the code will be sent to you after transaction verification ' | translate}}</div>
   <form [formGroup]="form">
@@ -96,7 +96,7 @@
         <div *ngIf="form.controls['email'].invalid && form.controls['email'].errors">
           <div class="input-hint-wrapper">
         <span class="wrap-input__message"
-              *ngIf="form.controls['email'].errors['pattern'] ||
+              *ngIf="form.controls['email'].errors['emailInvalid'] ||
                form.controls['email'].errors['required'] &&
                 (form.controls['email'].touched || isSubmited)">
           {{'Enter valid email to transfer' | translate}}
