--- a/src/app/dashboard/components/currency-pair-info-mobile/currency-pair-info-mobile.component.html
+++ b/src/app/dashboard/components/currency-pair-info-mobile/currency-pair-info-mobile.component.html
@@ -8,6 +8,7 @@
         [options]="DIOptions"
         (onChange)="onChangeCurrPair($event)"
         (onSelect)="onSelectPair($event.text)"
+        (onBlur)="onBlurInput()"
       ></app-dynamic-input-dashboard>
       <div
         class="currency-pair-info__info"
