devex-1388,1399,1402,1468,1536,1581,1617, 1628 and fix from Mark

--- a/src/app/dashboard/components/embedded-orders-mobile/embedded-open-orders-mobile/embedded-open-orders-mobile.component.html
+++ b/src/app/dashboard/components/embedded-orders-mobile/embedded-open-orders-mobile/embedded-open-orders-mobile.component.html
@@ -1,6 +1,6 @@
 <!--orders-mob start-->
 <cdk-virtual-scroll-viewport style="height: 227px;" itemSize="90">
-    <table class="table table--mob">
+    <table class="table table--mob open-orders--mob">
       <thead class="table__head">
         <tr class="table__head-row">
           <th class="table__cell-head table__cell-head--tal">{{'Pair / Date' | translate}}
