--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -51,7 +51,7 @@
     margin-bottom: 0;
     margin-right: 80px;
   }
-  @media (min-width:1200px) {
+  @media (min-width:1200px) and (max-width: 1259px){
     margin-bottom: 0;
     margin-right: 30px;
   }
