--- a/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.html
+++ b/src/app/funds/balance/send-money/send-step-three/transfer-instant/transfer-instant.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="!!activeCrypto && !!activeBalance">
-<div class="title send__title">{{'Make Inner transfer by email or nickname' | translate}}</div>
+<div class="title send__title">{{'Make Inner transfer by email' | translate}}</div>
 <div class="formWraper" *ngIf="isEnterData">
   <form [formGroup]="form">
     <div class="send__inputs-wrap">
