--- a/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.scss
+++ b/src/app/funds/balance/send-money/send-step-two/send-crypto/send-crypto.component.scss
@@ -72,7 +72,7 @@
     }
     &__inputs-wrap{
       flex-direction: row;
-      align-items: flex-start;
+      // align-items: flex-start;
       justify-content: space-between;
       margin-bottom: 24px;
     }
