--- a/src/app/funds/balance/send-money/send-step-two/send-inner-transfer/send-inner-transfer.component.html
+++ b/src/app/funds/balance/send-money/send-step-two/send-inner-transfer/send-inner-transfer.component.html
@@ -7,7 +7,7 @@
     (click)="chooseTransfer('By email')"
   >{{'Instant transfer' | translate}}</button>
   <div class="send__transfer-description">
-    {{'Send instant internal transfer to another account using their email or nickname' | translate}}.
+    {{'Send instant internal transfer to another account using their email' | translate}}.
   </div>
 </div>
 <div class="send__row">
