--- a/src/app/funds/balance/send-money/send-step-three/send-tfa/send-tfa.component.html
+++ b/src/app/funds/balance/send-money/send-step-three/send-tfa/send-tfa.component.html
@@ -1,36 +1,35 @@
 <div *ngIf="pincodeFrom === CODE_FROM_GOOGLE">
-  <div class="title send__title">Two factor authentication</div>
+  <div class="title send__title">{{'Two factor authentication' | translate}}</div>
   <!--if google 2fa enabled start-->
   <form [formGroup]="form">
-    <div class="subtitle send__subtitle">{{subtitleMessage}}</div>
     <div class="wrap-input send__wrap-input"
          [ngClass]="{'wrap-input--error': !form.valid && form.controls['pin'].touched}">
       <input class="wrap-input__input" name="pin" formControlName="pin" required>
-      <label class="wrap-input__label">Authenticator code</label>
+      <label class="wrap-input__label">{{'Authenticator code' | translate}}</label>
       <div class="wrap-input__line"></div>
       <!--Input error section starts-->
-      <span class="wrap-input__message" *ngIf="!form.valid && form.controls['pin'].touched">Invalid code</span><br>
-      <span class="wrap-input__message">{{message}}</span>
-      <!--<span class="wrap-input__message">Invalid code</span>-->
+       <div class="input-hint-wrapper">
+        <span class="wrap-input__message">{{subtitleMessage}}</span>
+      </div>
       <!--Input error section ends-->
     </div>
   </form>
 </div>
 <!--if google 2fa enabled end-->
+
 <!--pin code from email start-->
 <div *ngIf="pincodeFrom === CODE_FROM_EMAIL">
-  <div class="subtitle send__subtitle">Put the pincode from your email</div>
+  <div class="subtitle send__subtitle">{{'Put the pincode from your email' | translate}}</div>
   <form [formGroup]="form">
-    <div class="subtitle send__subtitle">{{subtitleMessage}}</div>
     <div class="wrap-input send__wrap-input"
          [ngClass]="{'wrap-input--error': !form.valid && form.controls['pin'].touched}">
       <input class="wrap-input__input" name="pin" formControlName="pin" required>
-      <label class="wrap-input__label">Pincode</label>
+      <label class="wrap-input__label">{{'Pincode' | translate}}</label>
       <div class="wrap-input__line"></div>
       <!--Input error section starts-->
-      <span class="wrap-input__message" *ngIf="!form.valid && form.controls['pin'].touched">Invalid code</span><br>
-      <span class="wrap-input__message">{{message}}</span>
-      <!--<span class="wrap-input__message">Invalid code</span>-->
+      <div class="input-hint-wrapper">
+      <span class="wrap-input__message">{{subtitleMessage}}</span>
+      </div>
       <!--Input error section ends-->
     </div>
   </form>
@@ -43,5 +42,5 @@
   [disabled]="form.invalid || loading"
   (click)="onSubmit()"
 >
-  Submit
+  {{'Submit' | translate}}
 </button>
